refactor: 테스트 코드 가짜 객체로 교체